--- a/index.html
+++ b/index.html
@@ -39,23 +39,19 @@
             <div class="inner-bg">
                 <div class="container">
                     <div class="row">
-                    	<div class="col-sm-5 phone">
-                        	<img src="assets/img/iphone-1.png" alt="">
+                    	<div class="col-sm-7 phone">
+                        	<img src="assets/img/nexus5-1.png" alt="">
                         </div>
-                        <div class="col-sm-7 text">
-                            <h1>Teris App is now ready. <br>Go get it!</h1>
+                        <div class="col-sm-5 text">
+                            <h1>Hi Neg <br />for Hacker News</h1>
                             <div class="description">
-                            	We have been working very hard to design the new version of our app. 
-                            	Finally it's ready. It comes with a lot of new features. Check it out!
+                            	An app dedicated to <strong>comments reading experience</strong>, and it's open source.
                             </div>
                             <div class="top-button">
-                            	<a class="button-1" href="#">
-                            		<span class="button-1-left"><i class="fa fa-mobile"></i></span>
-                            		<span class="button-1-right">
-                            			<span class="button-1-right-top">Available on the</span>
-                            			<span class="button-1-right-bottom">App Store</span>
-                            		</span>
-                            	</a>
+							<a href="#">
+  <img alt="Get it on Google Play"
+       src="https://developer.android.com/images/brand/en_generic_rgb_wo_60.png" />
+</a>
                             </div>
                         </div>
                     </div>
@@ -69,42 +65,32 @@
 	            <div class="row">
 	                <div class="col-sm-12 features">
 	                    <h2>What makes it special</h2>
-	                    <p>
-	                    	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut 
-	                    	labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.
-	                    </p>
 	                </div>
 	            </div>
 	            <div class="row">
-	                <div class="col-sm-4 features-box-1">
+	                <div class="col-sm-3 features-box-1">
 	                	<div class="features-box-1-icon">
-	                		<i class="fa fa-eye"></i>
+	                		<i class="fa  fa-font"></i>
 	                	</div>
-	                    <h3>Easy To Use</h3>
-	                    <p>
-	                    	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut 
-	                    	labore et.
-	                    </p>
+	                    <h3>Customizable Typography</h3>
 	                </div>
-	                <div class="col-sm-4 features-box-1">
+	                <div class="col-sm-3 features-box-1">
 	                	<div class="features-box-1-icon">
-	                		<i class="fa fa-table"></i>
+	                		<i class="fa fa-indent"></i>
 	                	</div>
-	                    <h3>Responsive Layout</h3>
-	                    <p>
-	                    	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut 
-	                    	labore et.
-	                    </p>
+	                    <h3>Two-way Comments Collapsing</h3>
 	                </div>
-	                <div class="col-sm-4 features-box-1">
+	                <div class="col-sm-3 features-box-1">
 	                	<div class="features-box-1-icon">
-	                		<i class="fa fa-pencil"></i>
+	                		<i class="fa fa-arrow-circle-down"></i>
 	                	</div>
-	                    <h3>Awesome Design</h3>
-	                    <p>
-	                    	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut 
-	                    	labore et.
-	                    </p>
+	                    <h3>Scroll-down Floating Button</h3>
+	                </div>
+					 <div class="col-sm-3 features-box-1">
+	                	<div class="features-box-1-icon">
+	                		<i class="fa fa-filter"></i>
+	                	</div>
+	                    <h3>Post Summary</h3>
 	                </div>
 	            </div>
 	        </div>
@@ -113,34 +99,18 @@
         <!-- Single feature -->
         <div class="single-feature-container single-feature-bg">
 	        <div class="container">
+
 	            <div class="row">
-	                <div class="col-sm-12 single-feature-text">
-	                    <h2>Easy to use</h2>
-	                    <p>
-	                    	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut 
-	                    	labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.
-	                    </p>
-	                </div>
-	            </div>
-	            <div class="row">
-	            	<div class="col-sm-7 single-feature-img-description">
+	            	<div class="col-sm-6 single-feature-img-description">
+					<h2>Customizable Typography</h2>
 	                    <p>
 	                    	<strong>Ut wisi enim ad minim veniam, quis nostrud exerci tation</strong> <br>
 	                    	Ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. 
 	                    	Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat.
 	                    </p>
-	                    <p>
-	                    	<strong>Vel illum dolore eu feugiat nulla facilisis at vero eros</strong> <br>
-	                    	Et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
-	                    </p>
-	                    <p>
-	                    	<strong>Nam liber tempor cum soluta nobis eleifend option congue</strong> <br>
-	                    	Nihil imperdiet doming id quod mazim placerat facer possim assum. 
-	                    	Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem.
-	                    </p>
 	                </div>
-	                <div class="col-sm-5 single-feature-img">
-	                    <img src="assets/img/iphone-2.png" alt="">
+	                <div class="col-sm-6 single-feature-img">
+					<iframe width="420" height="315" src="http://www.youtube.com/embed/uyIskitqxcM" frameborder="0" allowfullscreen></iframe>
 	                </div>
 	            </div>
 	        </div>
@@ -150,32 +120,15 @@
         <div class="single-feature-container single-feature-no-bg">
 	        <div class="container">
 	            <div class="row">
-	                <div class="col-sm-12 single-feature-text">
-	                    <h2>Responsive layout</h2>
-	                    <p>
-	                    	Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut 
-	                    	aliquip ex ea commodo consequat. Ut wisi enim ad minim veniam.
-	                    </p>
+	                <div class="col-sm-6 single-feature-img">
+					<iframe width="420" height="315" src="http://www.youtube.com/embed/uyIskitqxcM" frameborder="0" allowfullscreen></iframe>
 	                </div>
-	            </div>
-	            <div class="row">
-	                <div class="col-sm-5 single-feature-img">
-	                    <img src="assets/img/iphone-3.png" alt="">
-	                </div>
-	                <div class="col-sm-7 single-feature-img-description">
+	                <div class="col-sm-6 single-feature-img-description">
+	                    <h2>Two-way Comments Collapsing</h2>
 	                    <p>
 	                    	<strong>Ut wisi enim ad minim veniam, quis nostrud exerci tation</strong> <br>
 	                    	Ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. 
 	                    	Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat.
-	                    </p>
-	                    <p>
-	                    	<strong>Vel illum dolore eu feugiat nulla facilisis at vero eros</strong> <br>
-	                    	Et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
-	                    </p>
-	                    <p>
-	                    	<strong>Nam liber tempor cum soluta nobis eleifend option congue</strong> <br>
-	                    	Nihil imperdiet doming id quod mazim placerat facer possim assum. 
-	                    	Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem.
 	                    </p>
 	                </div>
 	            </div>
@@ -186,56 +139,50 @@
         <div class="single-feature-container single-feature-bg">
 	        <div class="container">
 	            <div class="row">
-	                <div class="col-sm-12 single-feature-text">
-	                    <h2>Awesome design</h2>
-	                    <p>
-	                    	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut 
-	                    	labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.
-	                    </p>
-	                </div>
-	            </div>
-	            <div class="row">
-	            	<div class="col-sm-7 single-feature-img-description">
+	            	<div class="col-sm-6 single-feature-img-description">
+	                    <h2>Scroll-down Floating Button</h2>
 	                    <p>
 	                    	<strong>Ut wisi enim ad minim veniam, quis nostrud exerci tation</strong> <br>
 	                    	Ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. 
 	                    	Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat.
 	                    </p>
-	                    <p>
-	                    	<strong>Vel illum dolore eu feugiat nulla facilisis at vero eros</strong> <br>
-	                    	Et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
-	                    </p>
-	                    <p>
-	                    	<strong>Nam liber tempor cum soluta nobis eleifend option congue</strong> <br>
-	                    	Nihil imperdiet doming id quod mazim placerat facer possim assum. 
-	                    	Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem.
-	                    </p>
 	                </div>
-	                <div class="col-sm-5 single-feature-img">
-	                    <img src="assets/img/iphone-2.png" alt="">
+	                <div class="col-sm-6 single-feature-img">
+					<iframe width="420" height="315" src="http://www.youtube.com/embed/uyIskitqxcM" frameborder="0" allowfullscreen></iframe>
 	                </div>
 	            </div>
 	        </div>
         </div>
         
+        <!-- Single feature -->
+        <div class="single-feature-container single-feature-no-bg">
+	        <div class="container">
+	            <div class="row">
+	                <div class="col-sm-6 single-feature-img">
+					<iframe width="420" height="315" src="http://www.youtube.com/embed/uyIskitqxcM" frameborder="0" allowfullscreen></iframe>
+	                </div>
+	                <div class="col-sm-6 single-feature-img-description">
+	                    <h2>Post Summary</h2>
+	                    <p>
+	                    	<strong>Ut wisi enim ad minim veniam, quis nostrud exerci tation</strong> <br>
+	                    	Ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. 
+	                    	Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat.
+	                    </p>
+	                </div>
+	            </div>
+	        </div>
+        </div>
         <!-- Call to action -->
         <div class="call-to-action-container">
 	        <div class="container">
 	            <div class="row">
 	                <div class="col-sm-12 call-to-action-text">
 	                    <h2>Download it now</h2>
-	                    <p>
-	                    	Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut 
-	                    	aliquip ex ea commodo consequat. Ut wisi enim ad minim veniam, quis nostrud exercitation.
-	                    </p>
 	                    <div class="call-to-action-button">
-                            <a class="button-1" href="#">
-                            	<span class="button-1-left"><i class="fa fa-mobile"></i></span>
-                            	<span class="button-1-right">
-                            		<span class="button-1-right-top">Get it on the</span>
-                            		<span class="button-1-right-bottom">App Store</span>
-                            	</span>
-                            </a>
+							<a href="#">
+  <img alt="Get it on Google Play"
+       src="https://developer.android.com/images/brand/en_generic_rgb_wo_60.png" />
+</a>
                         </div>
 	                </div>
 	            </div>
@@ -248,12 +195,12 @@
 	            <div class="row">
 	                <div class="col-sm-12">
 	                    <div class="footer-social">
-	                    	<a class="social social-facebook" href=""><i class="fa fa-facebook"></i></a>
 	                    	<a class="social social-twitter" href=""><i class="fa fa-twitter"></i></a>
-	                    	<a class="social social-pinterest" href=""><i class="fa fa-pinterest"></i></a>
+	                    	<a class="social social-github" href=""><i class="fa fa-github"></i></a>
+	                    	<a class="social social-googleplus" href=""><i class="fa fa-google-plus"></i></a>
 	                    </div>
 	                    <div class="footer-copyright">
-	                    	&copy; Teris Bootstrap Template by <a href="http://azmind.com">Azmind</a>.
+	                    	&copy; Teris Bootstrap Template by <a href="http://azmind.com">Azmind</a>, modified by <a href="">Leav Jenn</a>.
 	                    </div>
 	                </div>
 	            </div>
