--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 	                    </p>
 	                </div>
 	                <div class="col-sm-6 single-feature-img">
-					<iframe width="420" height="315" src="http://www.youtube.com/embed/uyIskitqxcM" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
+					<iframe width="420" height="315" src="https://www.youtube.com/embed/uyIskitqxcM" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
 	                </div>
 	            </div>
 	        </div>
@@ -121,7 +121,7 @@
 	        <div class="container">
 	            <div class="row">
 	                <div class="col-sm-6 single-feature-img">
-					<iframe width="420" height="315" src="http://www.youtube.com/embed/uyIskitqxcM" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
+					<iframe width="420" height="315" src="https://www.youtube.com/embed/uyIskitqxcM" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
 	                </div>
 	                <div class="col-sm-6 single-feature-img-description">
 	                    <h2>Two-way Comments Collapsing</h2>
@@ -148,7 +148,7 @@
 	                    </p>
 	                </div>
 	                <div class="col-sm-6 single-feature-img">
-					<iframe width="420" height="315" src="http://www.youtube.com/embed/uyIskitqxcM" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
+					<iframe width="420" height="315" src="https://www.youtube.com/embed/uyIskitqxcM" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
 	                </div>
 	            </div>
 	        </div>
@@ -159,7 +159,7 @@
 	        <div class="container">
 	            <div class="row">
 	                <div class="col-sm-6 single-feature-img">
-					<iframe width="420" height="315" src="http://www.youtube.com/embed/uyIskitqxcM" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
+					<iframe width="420" height="315" src="https://www.youtube.com/embed/uyIskitqxcM" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
 	                </div>
 	                <div class="col-sm-6 single-feature-img-description">
 	                    <h2>Post Summary</h2>
