feat: add real content

--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Teris - Responsive App Landing Page</title>
+        <title>Hi Neg for Hacker News</title>
 
         <!-- CSS -->
         <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic">
+		<link rel="stylesheet" href='http://fonts.googleapis.com/css?family=Lora:400,700'>
         <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
         <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.min.css">
         <link rel="stylesheet" href="assets/css/buttons.css">
@@ -28,7 +29,7 @@
         <link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/ico/apple-touch-icon-144-precomposed.png">
         <link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/apple-touch-icon-114-precomposed.png">
         <link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/apple-touch-icon-72-precomposed.png">
-        <link rel="apple-touch-icon-precomposed" href="assets/ico/apple-touch-icon-57-precomposed.png">
+        <link rel="apple-touch-icon-precomposed" href="assets/ico/apple-touch-icon-56-precomposed.png">
 
     </head>
 
@@ -43,15 +44,16 @@
                         	<img src="assets/img/nexus5-1.png" alt="">
                         </div>
                         <div class="col-sm-5 text">
-                            <h1>Hi Neg <br />for Hacker News</h1>
+                            <h1>Hi Neg<br />for Hacker News</h1>
                             <div class="description">
-                            	An app dedicated to <strong>comments reading experience</strong>, and it's open source.
+                            	Dedicated to <strong>comments reading experience</strong>, and it's open source.
                             </div>
                             <div class="top-button">
+							<h3>Get it now <i class="fa  fa-arrow-right"></i>
 							<a href="#">
   <img alt="Get it on Google Play"
        src="https://developer.android.com/images/brand/en_generic_rgb_wo_60.png" />
-</a>
+</a></h3>
                             </div>
                         </div>
                     </div>
@@ -64,7 +66,7 @@
 	        <div class="container">
 	            <div class="row">
 	                <div class="col-sm-12 features">
-	                    <h2>What makes it special</h2>
+	                    <h2>Features</h2>
 	                </div>
 	            </div>
 	            <div class="row">
@@ -104,10 +106,16 @@
 	            	<div class="col-sm-6 single-feature-img-description">
 					<h2>Customizable Typography</h2>
 	                    <p>
-	                    	<strong>Ut wisi enim ad minim veniam, quis nostrud exerci tation</strong> <br>
-	                    	Ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. 
-	                    	Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat.
+	                    	<strong>Bunch of typography adjustment options, for the best reading experience.</strong> <br />
+	                    	*10 distinct fonts: PT Sans, Roboto, Lato, Open Sans, Muli, Slabo 27px, Crimson Text, Roboto Slab, Vollkorn, Merriweather.<br />
+							*Fine-tuning font size and line-height is just a breeze.
 	                    </p>
+						<div class="call-to-action-in-page">
+						<h3>Get it now <i class="fa  fa-arrow-right"></i><a href="#">
+  <img alt="Get it on Google Play"
+       src="https://developer.android.com/images/brand/en_generic_rgb_wo_45.png" />
+</a></h3>
+	                </div>
 	                </div>
 	                <div class="col-sm-6 single-feature-img">
 					<iframe width="420" height="315" src="https://www.youtube.com/embed/uyIskitqxcM" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
@@ -126,10 +134,15 @@
 	                <div class="col-sm-6 single-feature-img-description">
 	                    <h2>Two-way Comments Collapsing</h2>
 	                    <p>
-	                    	<strong>Ut wisi enim ad minim veniam, quis nostrud exerci tation</strong> <br>
-	                    	Ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. 
-	                    	Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat.
+	                    	*I'm your father: Collapse all the children of one comment;<br />
+							*Come to Mama: Collapse all the comments between the chosen one and it's parent.
 	                    </p>
+						<div class="call-to-action-in-page">
+						<h3>Get it now <i class="fa  fa-arrow-right"></i><a href="#">
+  <img alt="Get it on Google Play"
+       src="https://developer.android.com/images/brand/en_generic_rgb_wo_45.png" />
+</a></h3>
+	                </div>
 	                </div>
 	            </div>
 	        </div>
@@ -142,10 +155,15 @@
 	            	<div class="col-sm-6 single-feature-img-description">
 	                    <h2>Scroll-down Floating Button</h2>
 	                    <p>
-	                    	<strong>Ut wisi enim ad minim veniam, quis nostrud exerci tation</strong> <br>
-	                    	Ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. 
-	                    	Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat.
+	                    	<strong>Reduce the pain of thumb</strong> <br>
+	                    	Scroll down the page by pressing or draging the big floating button, swipe no more.
 	                    </p>
+						<div class="call-to-action-in-page">
+						<h3>Get it now  <i class="fa  fa-arrow-right"></i><a href="#">
+  <img alt="Get it on Google Play"
+       src="https://developer.android.com/images/brand/en_generic_rgb_wo_45.png" />
+</a></h3>
+	                </div>
 	                </div>
 	                <div class="col-sm-6 single-feature-img">
 					<iframe width="420" height="315" src="https://www.youtube.com/embed/uyIskitqxcM" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
@@ -162,12 +180,17 @@
 					<iframe width="420" height="315" src="https://www.youtube.com/embed/uyIskitqxcM" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
 	                </div>
 	                <div class="col-sm-6 single-feature-img-description">
-	                    <h2>Post Summary</h2>
+	                    <h2>Post Summary (experiment)</h2>
 	                    <p>
-	                    	<strong>Ut wisi enim ad minim veniam, quis nostrud exerci tation</strong> <br>
-	                    	Ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. 
-	                    	Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat.
+	                    	<strong>It's clickbait!</strong> <br>
+	                    	Distill the summary (tl; dr) of a post from it's comments, save yourself from clickbait title. (This feature is still in test.)
 	                    </p>
+						<div class="call-to-action-in-page">
+						<h3>Get it now <i class="fa  fa-arrow-right"></i><a href="#">
+  <img alt="Get it on Google Play"
+       src="https://developer.android.com/images/brand/en_generic_rgb_wo_45.png" />
+</a></h3>
+	                </div>
 	                </div>
 	            </div>
 	        </div>
@@ -177,7 +200,7 @@
 	        <div class="container">
 	            <div class="row">
 	                <div class="col-sm-12 call-to-action-text">
-	                    <h2>Download it now</h2>
+	                    <h2>Free Download</h2>
 	                    <div class="call-to-action-button">
 							<a href="#">
   <img alt="Get it on Google Play"
@@ -212,7 +235,6 @@
         <script src="assets/js/jquery-1.10.2.min.js"></script>
         <script src="assets/js/jquery.backstretch.min.js"></script>
         <script src="assets/js/retina-1.1.0.min.js"></script>
-        <script src="assets/js/scripts.js"></script>
 
     </body>
 
