--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         <title>Hi Neg for Hacker News</title>
 
         <!-- CSS -->
-        <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic">
-		<link rel="stylesheet" href='http://fonts.googleapis.com/css?family=Lora:400,700'>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700">
+		<link rel="stylesheet" href='https://fonts.googleapis.com/css?family=Lora:700'>
         <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
         <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.min.css">
         <link rel="stylesheet" href="assets/css/buttons.css">
