fix: refine style and image

--- a/index.html
+++ b/index.html
@@ -40,13 +40,12 @@
             <div class="inner-bg">
                 <div class="container">
                     <div class="row">
-                    	<div class="col-sm-7 phone">
-                        	<img src="assets/img/nexus5-1.png" alt="">
-                        </div>
+
                         <div class="col-sm-5 text">
                             <h1>Hi Neg<br />for Hacker News</h1>
                             <div class="description">
-                            	Dedicated to <strong>comments reading experience</strong>, and it's open source.
+                            	Dedicated to <strong>reading experience</strong>.<br />
+								Free, no-ads, and it's <a href="#">open source</a>.
                             </div>
                             <div class="top-button">
 							<h3>Get it now <i class="fa  fa-arrow-right"></i>
@@ -55,6 +54,9 @@
        src="https://developer.android.com/images/brand/en_generic_rgb_wo_60.png" />
 </a></h3>
                             </div>
+                        </div>
+						  <div class="col-sm-7 phone">
+                        	<img src="assets/img/nexus5-1.png" alt="">
                         </div>
                     </div>
                 </div>
